<resources>
    <string name="app_name">ChatApp</string>
    <string name="title_activity_notification_page">Notification_page</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nearby__map">Map</string>
    <string name="SPORT">SPORT</string>
    <string name="PHOTOGRAPH">SHOOT</string>
    <string name="GAME">GAME</string>
    <string name="FASHION">FASHION</string>
    <string name="MUSIC">MUSIC</string>
    <string name="PET">PET</string>
    <string name="TECHNOLOGY">TECHNOLOGY</string>
    <string name="FOOD">FOOD</string>
    <string name="MOVIE">MOVIE</string>
    <string name="todo">todo</string>
</resources>
